test/Fail/AnonymousRecConstrLocal.agda

module AnonymousRecConstrLocal where

foo : (x : Set) → x.constructor
foo = _
