test/Fail/AnonymousRecConstrLocal.err
AnonymousRecConstrLocal.agda:4.19-32: error: [ConstructorNameOfNonRecord]
Only record types have constructor names, but x is a local
variable.
when scope checking x.constructor
